--- a/feb2023.md
+++ b/feb2023.md
@@ -1,4 +1,4 @@
- # Language Development 2023
+## Language Development 2023
  
  ### Overview of Products
  
@@ -14,7 +14,7 @@
   
 What will be developed are the implementations, how the compilers/interpreters are organised and used. Some work is needed on the module scheme they both share, and how Q and M programs can work better together.
 
-`qq.exe` I also found to be a little bloated, and full of baggage no longer needed. It's 750KB size, if not huge for a rich language, is still bigger than many lightweight interpreters. It needs an overhaul.
+`qq.exe` I also found to be a little bloated, and full of baggage no longer needed. Its 750KB size, if not huge for a rich language, is still bigger than many lightweight interpreters. It needs an overhaul.
 
 ### Module Scheme 2023
 
