--- a/feb2023.md
+++ b/feb2023.md
@@ -7,6 +7,9 @@
  mm.exe | M | M Compiler (M is my static systems language)
  qq.exe | Q | Q Compiler/Interpreter (Q is my dynamic language)
  aa.exe | ASM | x64 subset assembler/linker
+ (bcc.exe | C | C-subset compiler)
+ 
+ All are implemented in the M language.
  
  ### New Language Development
  
@@ -30,7 +33,7 @@ This applies to both languages, but may do Q first.
 
 The current M6 version uses ad hoc code generation, to turn AST3 into MCL (the x64 representation), replacing the 'PCL' IL of M5. It also drops the small optimiser of M5.
 
-But I feel that a more abstract intermediate form is needed. I don't want code converting AST nodes to worry about the details of register allocation, yet neither to want to introduce a disruptive extra intermediate stage.
+But I feel that a more abstract intermediate form is needed. I don't want code converting AST nodes to worry about the details of register allocation, yet neither do I really need a complete IL like before.
 
 So I'm trying an experimental approach:
 
@@ -39,7 +42,7 @@ So I'm trying an experimental approach:
 * This new set doesn't use registers, but a virtual, compile-time operand stack
 * An extra pass will be needed to expand those to concrete MCL instructions with full registers
 
-This could work better than a discrete PCL IL, since half the codes (for declarations, comments, labels etc) do the same thing on both. This new PCL opcode works with expressions.
+This could work better than a discrete PCL IL, since half the codes (for declarations, comments, labels etc) do the same thing on both. This new PCL opcode works only with expressions.
 
 #### Optimiser
 
@@ -49,9 +52,13 @@ However, sometimes Q programs call into M functions for speedups. There, all the
 
 So the optimiser may be reinstated as here it can have worthwhile benefits.
 
+#### C Compiler
+
+This used ad hoc methods as well, and the code in the compiler is an appalling mess. If the above works, then possibly it may be retrofitted to the `bcc` project. It would also make it fully ABI-compliant as it isn't right now.
+
 ### Q Implementation
 
-My script language have largely done their own thing for 30 years, which included having discrete bytecode files, and separate compile/run steps. Until a a few years ago when I decided to integrate those into one product.
+My script languages have largely done their own thing for 30 years, which included having discrete bytecode files, and separate compile/run steps. Until a a few years ago when I decided to integrate those into one product.
 
 This has some advantages: everything is run-from-source, so is always up-to-date. And there are no untidy binary files about.
 
@@ -80,3 +87,24 @@ for things that need to run fast. So an application may involve `pc.exe`, `app.p
 
 I've yet to work it out in detail, but probably the final application will be a single file `app.exe`, which incorporates the M functions, but also has a driver front end which invokes `pc.ml` with `app.pc`. I will have to see how best to bundle these two extra files within app.exe to give the illusion of a self-contained executable.
 
+### File Extensions and MX/ML
+
+I might make some changes here too. Currently `mm.exe` generates binaries as `.exe`, or as `.mx` or `.ml`. Those last my own formats; `mx` is for complete executables, `ml` is for libraries used for M or Q applications.
+
+Since the OS doesn't know about `mx`, I need stub program, currently called `run.exe`, to execute `mx` programs. `ml` libraries can only be used automatically from `mx` files (for DLL, the OS loader does the fixups).
+
+I'm considering renaming so that there are parallels between my M and Q languages. Under the new scheme, both `.mx` and `.ml` will use `.mc` instead:
+
+Language | Compiler | Output file | Run program | Example
+--- | --- | --- | --- | ---
+M | `mm.exe` | `fred.exe` | None (OS-loaded) | `fred` or `fred.exe`
+M | `mm.exe -mc` | `fred.mc` | `mc.exe` | `mc fred`
+Q | `qc.exe`     | `fred.pc` | `pc.exe` | `pc fred`
+
+* `mc.exe` runs `.mc` x64 executables; `pc.exe runs `.pc` binary bytecode
+* Currently `mc.exe` is used for the M compiler that transpiles to C; perhaps change that to `mcc.exe`.
+* `.mc` format is primarily for libraries. Those can be used directly from Q, but from M, can only be automatically loaded from an `mc` program, or another `mc` library.
+
+Currently `.pc` files cannot be used as Q libraries (so Q apps consist of more than one bytecode file). It's easier to instead import the lead module and compile in as source code. But the idea of distributing .pc as separate, importable binaries is good; I will have to think about it.
+
+Lots of useful combinations that will be needed to creat tidy hybrid Q and M combinations
