--- a/feb2023.md
+++ b/feb2023.md
@@ -13,7 +13,7 @@
  
  ### New Language Development
  
- Very little is envisaged in the languages themselves. The designs are pretty much fixed; the syntax is not going to change; the type systems will stay the same. That is, 1980s style which works perfectly fine for me.
+Very little is envisaged in the languages themselves. The designs are pretty much fixed; the syntax is not going to change; the type systems will stay the same. That is, 1980s style which works perfectly fine for me.
   
 What will be developed are the implementations, how the compilers/interpreters are organised and used. Some work is needed on the module scheme they both share, and how Q and M programs can work better together.
 
@@ -31,7 +31,7 @@ This applies to both languages, but may do Q first.
 
 ### M Compiler Changes
 
-The current M6 version uses ad hoc code generation, to turn AST3 into MCL (the x64 representation), replacing the 'PCL' IL of M5. It also drops the small optimiser of M5.
+The current M6 version uses ad hoc code generation, to turn AST3 into MCL (the x64 representation), eliminating the 'PCL' IL of M5. It also drops the small optimiser of M5.
 
 But I feel that a more abstract intermediate form is needed. I don't want code converting AST nodes to worry about the details of register allocation, yet neither do I really need a complete IL like before.
 
@@ -54,7 +54,7 @@ So the optimiser may be reinstated as here it can have worthwhile benefits.
 
 #### C Compiler
 
-This used ad hoc methods as well, and the code in the compiler is an appalling mess. If the above works, then possibly it may be retrofitted to the `bcc` project. It would also make it fully ABI-compliant as it isn't right now.
+This uses ad hoc methods as well, and the code in the compiler is an appalling mess. If the above works, then possibly it may be retrofitted to the `bcc` project. It would also make it fully ABI-compliant as it isn't right now.
 
 ### Q Implementation
 
@@ -66,7 +66,7 @@ But, my 750KB interpreter is quite heavyweight. Now, 300KB of that are bundled l
 
 The advantage is being able to ship finished apps as a single binary .pc file, instead of a .qa file which is an amalgamation of source and support files, and which needs a compiler. Being a rich language, that is quite heavyweight.
 
-However I will also need a way to emulate that run-from-source (after all mm.exe can do run from source; it would be ironic if my systems language had it, but not my scripting one!). Creating a batch file for that won't cut it.
+However I will also need a way to emulate that run-from-source (after all `mm.exe` can do run from source; it would be ironic if my systems language had it, but not my scripting one!). Creating a batch file for that won't cut it.
 
 For this, I will look at making more use of ML files.
 
@@ -76,22 +76,21 @@ For this, I will look at making more use of ML files.
 
 One use however is to replace the current `qq.exe` interpreter. `qc.exe` (bytecode compiler) can be configured as `qc.ml`, a library version, and `pc.exe` as `pc.ml`, the bytecode interpreter.
 
-`qq.exe` can import `qc.ml/pc.ml`. Because they will share the same environment as the host program, it is easy for `qc.ml` to return a bytecode data structure, and pass it directly to `pc.ml`. (DLL makes that a bit harder; the can contain their own instances of the C runtime for example).
+`qq.exe` can import `qc.ml/pc.ml`. Because they will share the same environment as the host program, it is easy for `qc.ml` to return a bytecode data structure, and pass it directly to `pc.ml`. (DLL makes that a bit harder; they can contain their own instances of the C runtime for example, and allocated pointers are not compatible.)
 
 Anyway, new `qq.exe` will be able to run `.q` programs with no intermediate `.pc` files generated.
 
 ### Q Applications
 
-Binary .pc files is a step forward, but an app still needs a Q interpreter, `pc.exe`. And also, some Q apps may make use of M functions for some aspects,
-for things that need to run fast. So an application may involve `pc.exe`, `app.pc` and `app.ml`.
+Binary .pc files is a step forward, but an app still needs a Q interpreter, `pc.exe`. And also, some Q apps may make use of M functions for some aspects, for things that need to run fast. So an application may involve `pc.exe`, `app.pc` and `app.ml`.
 
 I've yet to work it out in detail, but probably the final application will be a single file `app.exe`, which incorporates the M functions, but also has a driver front end which invokes `pc.ml` with `app.pc`. I will have to see how best to bundle these two extra files within app.exe to give the illusion of a self-contained executable.
 
 ### File Extensions and MX/ML
 
-I might make some changes here too. Currently `mm.exe` generates binaries as `.exe`, or as `.mx` or `.ml`. Those last my own formats; `mx` is for complete executables, `ml` is for libraries used for M or Q applications.
+I might make some changes here too. Currently `mm.exe` generates binaries as `.exe`, or as `.mx` or `.ml`. Those last are my own formats; `mx` is for complete executables, `ml` is for libraries used for M or Q applications.
 
-Since the OS doesn't know about `mx`, I need stub program, currently called `run.exe`, to execute `mx` programs. `ml` libraries can only be used automatically from `mx` files (for DLL, the OS loader does the fixups).
+Since the OS doesn't know about `mx`, I need a small stub program, currently called `run.exe`, to execute `mx` programs. `ml` libraries can only be used automatically from `mx` files (for DLL, the OS loader does the fixups).
 
 I'm considering renaming so that there are parallels between my M and Q languages. Under the new scheme, both `.mx` and `.ml` will use `.mc` instead:
 
@@ -101,10 +100,10 @@ M | `mm.exe` | `fred.exe` | None (OS-loaded) | `fred` or `fred.exe`
 M | `mm.exe -mc` | `fred.mc` | `mc.exe` | `mc fred`
 Q | `qc.exe`     | `fred.pc` | `pc.exe` | `pc fred`
 
-* `mc.exe` runs `.mc` x64 executables; `pc.exe runs `.pc` binary bytecode
+* `mc.exe` runs `.mc` x64 executables, renamed from `run.exe`; `pc.exe runs `.pc` binary bytecode
 * Currently `mc.exe` is used for the M compiler that transpiles to C; perhaps change that to `mcc.exe`.
 * `.mc` format is primarily for libraries. Those can be used directly from Q, but from M, can only be automatically loaded from an `mc` program, or another `mc` library.
 
-Currently `.pc` files cannot be used as Q libraries (so Q apps consist of more than one bytecode file). It's easier to instead import the lead module and compile in as source code. But the idea of distributing .pc as separate, importable binaries is good; I will have to think about it.
+Currently `.pc` files cannot be used as Q libraries (so that Q apps can consist of more than one bytecode file). It's easier to instead import the lead module and compile in as source code. But the idea of distributing .pc as separate, importable binaries is good; I will have to think about it.
 
-Lots of useful combinations that will be needed to creat tidy hybrid Q and M combinations
+Lots of useful combinations that can be used to create tidy hybrid Q and M appications.
