--- a/feb2023.md
+++ b/feb2023.md
@@ -46,7 +46,7 @@ This could work better than a discrete PCL IL, since half the codes (for declara
 
 #### Optimiser
 
-M5 had a small optimiser, consisting of keeping some locals and parameters in registers. It worked well for benchmarks, but for real applications with scattered control flow and heavy of globals, the advantages were limited, so it was dropped.
+M5 had a small optimiser, consisting of keeping some locals and parameters in registers. It worked well for benchmarks, but for real applications with scattered control flow and heavy use of globals, the advantages were limited, so it was dropped.
 
 However, sometimes Q programs call into M functions for speedups. There, all the action is inside that function, and it will mainly work with locals.
 
@@ -76,9 +76,14 @@ For this, I will look at making more use of ML files.
 
 One use however is to replace the current `qq.exe` interpreter. `qc.exe` (bytecode compiler) can be configured as `qc.ml`, a library version, and `pc.exe` as `pc.ml`, the bytecode interpreter.
 
-`qq.exe` can import `qc.ml/pc.ml`. Because they will share the same environment as the host program, it is easy for `qc.ml` to return a bytecode data structure, and pass it directly to `pc.ml`. (DLL makes that a bit harder; they can contain their own instances of the C runtime for example, and allocated pointers are not compatible.)
+`qq.exe` can import `qc.ml/pc.ml` (see **note**). Because they will share the same environment as the host program, it is easy for `qc.ml` to return a bytecode data structure, and pass it directly to `pc.ml`. (DLL makes that a bit harder; they can contain their own instances of the C runtime for example, and allocated pointers are not compatible.)
 
 Anyway, new `qq.exe` will be able to run `.q` programs with no intermediate `.pc` files generated.
+
+**Note** Exe files can't automatically import `ml` files (I've may rename to `mc`; see below), as the OS doesn't know about then. I may need to
+do this manually. Or emulate `qq.exe` as a combination of `run.exe` and `qq.mx`, which can import `.ml` easily.
+
+It sounds messy, so something else that needs to tidied up. (Another problem is that MX files are 20% bigger than equivalent EXE files due to having extra relocation info.)
 
 ### Q Applications
 
