--- a/feb2023.md
+++ b/feb2023.md
@@ -80,10 +80,12 @@ One use however is to replace the current `qq.exe` interpreter. `qc.exe` (byteco
 
 Anyway, new `qq.exe` will be able to run `.q` programs with no intermediate `.pc` files generated.
 
-**Note** Exe files can't automatically import `ml` files (I've may rename to `mc`; see below), as the OS doesn't know about then. I may need to
+**Note** EXE files can't automatically import `ml` files (I may rename to `mc`; see below), as the OS doesn't know about them. I need to
 do this manually. Or emulate `qq.exe` as a combination of `run.exe` and `qq.mx`, which can import `.ml` easily.
 
-It sounds messy, so something else that needs to tidied up. (Another problem is that MX files are 20% bigger than equivalent EXE files due to having extra relocation info.)
+It sounds messy, so something else that needs to tidied up. Another problem is that MX files are 20% bigger than equivalent EXE files due to having extra relocation info, but I'm trying to make this stuff smaller!
+
+I might after all just statically compile the sources codes together; the module 'subprogram' scheme makes that easy. This can be for a one-off build of `qq.exe` so it doesn't matter if unwieldly.
 
 ### Q Applications
 
