--- a/feb2023.md
+++ b/feb2023.md
@@ -101,7 +101,7 @@ Since the OS doesn't know about `mx`, I need a small stub program, currently cal
 
 I'm considering renaming so that there are parallels between my M and Q languages. Under the new scheme, both `.mx` and `.ml` will use `.mc` instead:
 
-Language | Compiler | Output file | Run program | Example
+Language | Compiler | Output file | Run program | Run example
 --- | --- | --- | --- | ---
 M | `mm.exe` | `fred.exe` | None (OS-loaded) | `fred` or `fred.exe`
 M | `mm.exe -mc` | `fred.mc` | `mc.exe` | `mc fred`
