--- a/feb2023.md
+++ b/feb2023.md
@@ -114,3 +114,16 @@ Q | `qc.exe`     | `fred.pc` | `pc.exe` | `pc fred`
 Currently `.pc` files cannot be used as Q libraries (so that Q apps can consist of more than one bytecode file). It's easier to instead import the lead module and compile in as source code. But the idea of distributing .pc as separate, importable binaries is good; I will have to think about it.
 
 Lots of useful combinations that can be used to create tidy hybrid Q and M appications.
+
+### MA and QA Files
+
+These are the single file amalgamations that can be produced by either product. The file contains all sources and text files needed to build a complete program. A year ago I simplified the format: just concatenating files, each with a header line containing its name.
+
+That format allows minor editing, and reasonably simple extraction with a script. But it has some some issues:
+
+* Header lines start with "===". That is not a problem with source files, but could conceivably occur with support files, if they contain such a line
+* Binary files cannot be included. This would be a problem if `bininclude` was used in M, or `strinclude` with Q is the file was binary.
+* Reading it into a compiler is not hard, but a little more fiddly than I would like
+
+I may therefore revert to an older format, where the start of the file is a directory listing the files, and the offsets and sizes of the sections in the rest of the file. Binary files can be included (but may still cause problems if viewing with a text editor).
+
