--- a/feb2023.md
+++ b/feb2023.md
@@ -127,3 +127,11 @@ That format allows minor editing, and reasonably simple extraction with a script
 
 I may therefore revert to an older format, where the start of the file is a directory listing the files, and the offsets and sizes of the sections in the rest of the file. Binary files can be included (but may still cause problems if viewing with a text editor).
 
+### Progress Updates
+
+What has actually been done:
+
+* M: I've started generated hybrid MCL/PCL code in `mm.exe`. Enough works to get started on that new pass to turn PCL ops into MCL
+* Q: By removing all optional stuff (eg. diagnostic modules), the smallest `qq.exe` (still the current composite program) is 383KB. (Or 359KB using the M5 optimising compiler, but I will use M6 for comparisons.)
+* An experimental split has suggested that the compile-only `qc.exe` will be under 250KB. It can produce internal PCL bytecode.
+* The next step there is to devise a PC bytecode binary format, likely based on what I used before; to generate discrete PC files; and writing a utility program to display those files.
