--- a/feb2023.md
+++ b/feb2023.md
@@ -127,6 +127,15 @@ That format allows minor editing, and reasonably simple extraction with a script
 
 I may therefore revert to an older format, where the start of the file is a directory listing the files, and the offsets and sizes of the sections in the rest of the file. Binary files can be included (but may still cause problems if viewing with a text editor).
 
+### Function Tables
+
+This is a feature of M compiler when tables of all functions used are built-in to the EXE file. It's very useful for building tables of handlers at runtime, without needing to maintain tables manually.
+
+But I've just discovered it can increase EXE files by 10%. So I will look at changing that feature, so that only selected functions are listed.
+
+That will require a syntax update, and revising my codebase. 10% is just too significant: it's more than the savings in code size my modest optimiser achieves.
+
+
 ### Progress Updates
 
 What has actually been done:
