--- a/feb2023.md
+++ b/feb2023.md
@@ -131,7 +131,7 @@ I may therefore revert to an older format, where the start of the file is a dire
 
 This is a feature of M compiler when tables of all functions used are built-in to the EXE file. It's very useful for building tables of handlers at runtime, without needing to maintain tables manually.
 
-But I've just discovered it can increase EXE files by 10%. So I will look at changing that feature, so that only selected functions are listed.
+But I've just discovered it can increase EXE files by 10% (for procs that access those tables). So I will look at changing that feature, so that only selected functions are listed.
 
 That will require a syntax update, and revising my codebase. 10% is just too significant: it's more than the savings in code size my modest optimiser achieves.
 
@@ -144,3 +144,4 @@ What has actually been done:
 * Q: By removing all optional stuff (eg. diagnostic modules), the smallest `qq.exe` (still the current composite program) is 383KB. (Or 359KB using the M5 optimising compiler, but I will use M6 for comparisons.)
 * An experimental split has suggested that the compile-only `qc.exe` will be under 250KB. It can produce internal PCL bytecode.
 * The next step there is to devise a PC bytecode binary format, likely based on what I used before; to generate discrete PC files; and writing a utility program to display those files.
+* Decided to deal with function tables now. They were already only generated if an app referenced the tables, but ALL functions would be listed. Now only for marked functions (writing `proc fn*` instead of `proc fn`), or if a special option is used to force all to be output.
