--- a/feb2023.md
+++ b/feb2023.md
@@ -144,4 +144,4 @@ What has actually been done:
 * Q: By removing all optional stuff (eg. diagnostic modules), the smallest `qq.exe` (still the current composite program) is 383KB. (Or 359KB using the M5 optimising compiler, but I will use M6 for comparisons.)
 * An experimental split has suggested that the compile-only `qc.exe` will be under 250KB. It can produce internal PCL bytecode.
 * The next step there is to devise a PC bytecode binary format, likely based on what I used before; to generate discrete PC files; and writing a utility program to display those files.
-* Decided to deal with function tables now. They were already only generated if an app referenced the tables, but ALL functions would be listed. Now only for marked functions (writing `proc fn*` instead of `proc fn`), or if a special option is used to force all to be output.
+* Decided to deal with function tables now. They were already only generated if an app referenced the tables, but ALL functions would be listed. Now only for marked functions (writing `proc fn*` instead of `proc fn`), or if a special option is used to force all to be output. Minimum `qq.exe` now at 353KB.
