--- a/feb2023.md
+++ b/feb2023.md
@@ -101,13 +101,13 @@ Since the OS doesn't know about `mx`, I need a small stub program, currently cal
 
 I'm considering renaming so that there are parallels between my M and Q languages. Under the new scheme, both `.mx` and `.ml` will use `.mc` instead:
 
-Language | Compiler | Output file | Run program | Run example
+Language | Compiler | Output file | 'Run' program | Run example
 --- | --- | --- | --- | ---
 M | `mm.exe` | `fred.exe` | None (OS-loaded) | `fred` or `fred.exe`
 M | `mm.exe -mc` | `fred.mc` | `mc.exe` | `mc fred`
 Q | `qc.exe`     | `fred.pc` | `pc.exe` | `pc fred`
 
-* `mc.exe` runs `.mc` x64 executables, renamed from `run.exe`; `pc.exe runs `.pc` binary bytecode
+* `mc.exe` runs `.mc` x64 executables, renamed from `run.exe`; `pc.exe` runs `.pc` binary bytecode
 * Currently `mc.exe` is used for the M compiler that transpiles to C; perhaps change that to `mcc.exe`.
 * `.mc` format is primarily for libraries. Those can be used directly from Q, but from M, can only be automatically loaded from an `mc` program, or another `mc` library.
 
@@ -121,7 +121,7 @@ These are the single file amalgamations that can be produced by either product. 
 
 That format allows minor editing, and reasonably simple extraction with a script. But it has some some issues:
 
-* Header lines start with "===". That is not a problem with source files, but could conceivably occur with support files, if they contain such a line
+* Header lines start with "===". That is not a problem with source files, but could conceivably occur within support files
 * Binary files cannot be included. This would be a problem if `bininclude` was used in M, or `strinclude` with Q is the file was binary.
 * Reading it into a compiler is not hard, but a little more fiddly than I would like
 
@@ -131,7 +131,7 @@ I may therefore revert to an older format, where the start of the file is a dire
 
 This is a feature of M compiler when tables of all functions used are built-in to the EXE file. It's very useful for building tables of handlers at runtime, without needing to maintain tables manually.
 
-But I've just discovered it can increase EXE files by 10% (for procs that access those tables). So I will look at changing that feature, so that only selected functions are listed.
+But I've just discovered it can increase EXE files by 10% (for programs that access those tables). So I will look at changing that feature, so that only selected functions are listed, not all of them.
 
 That will require a syntax update, and revising my codebase. 10% is just too significant: it's more than the savings in code size my modest optimiser achieves.
 
